# reverb-gui

./: .env.template  .gitignore  pyproject.toml  reverb-gui_asr_parameters.md  reverb-gui_specification.md
asr/wenet/cli/: reverb.py
reverb_gui/: main.py
reverb_gui/gui/: mainwindow.py
reverb_gui/gui/widgets/: drop_zone.py
reverb_gui/gui/workers/: transcription_worker.py
reverb_gui/pipeline/: engine.py
reverb_gui/utils/: ffmpeg.py  formatting.py  model_downloader.py  path_parser.py
tests/: test_main.py
tests/pipeline/: conftest.py  test_engine_load_models.py  test_engine_speaker_for_word.py  test_engine_transcribe.py
tests/utils/: test_ffmpeg.py  test_formatting.py  test_model_downloader.py  test_path_parser.py
