[build-system]
requires      = ["poetry-core"]
build-backend = "poetry-core"

[tool.poetry]
name         = "reverb-gui"
version      = "0.1.0"
description  = "GUI front-end for Rev’s Reverb ASR+diarization pipelines"
readme       = "README.md"
license      = "Apache-2.0"
authors      = ["Your Name <you@example.com>"]
keywords     = ["asr","diarization","reverb","gui"]
classifiers  = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
packages = [
  { include = "wenet", from = "asr" },
  # { include = "reverb_gui" },
]

[tool.poetry.dependencies]
python           = ">=3.10,<3.14"
torch            = "==2.2.2"
openai-whisper   = "*"
typeguard        = "^2.0"
wandb            = "*"
pyyaml           = ">=3.12"
huggingface-hub  = ">=0.13.0"
numpy            = "<2"
GitPython        = "*"
python-dotenv    = "^1.1.0"
"pyannote.audio" = "==3.3.1"
intervaltree     = "==3.1.0"
PySide6          = "^6.7"
ffmpeg-python    = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest    = "^7.0"
ruff      = "^0.1"
pytest-qt = "^4.4.0"

[tool.poetry.scripts]
reverb     = "wenet.bin.recognize_wav:main"
# reverb-gui = "reverb_gui.main:launch_gui"
